fix header padding on mobiles

--- a/style.less
+++ b/style.less
@@ -24,6 +24,12 @@
 	}
 }
 
+@media only screen and (min-width: 450px){
+	.header-contents {
+		.page-padding;
+	}
+}
+
 #image-navigation {
 	.clearfix();
 	margin-top:0.5em;
@@ -85,7 +91,8 @@
 	
 
 	.header-contents {
-		.page-padding;
+		padding-left:28px;
+		padding-right:28px;
 	}
 
 	.site-description{
